// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedNavigation mapDispatchToProps function fires 1`] = `
<div>
  <nav
    aria-label="Local"
    class="pf-c-nav pf-m-scrollable"
    data-ouia-component-id="7"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      &lt;ExpandableNav /&gt;
    </ul>
  </nav>
</div>
`;

exports[`ConnectedNavigation should render correctly with initial state 1`] = `
<div>
  <nav
    aria-label="Local"
    class="pf-c-nav pf-m-scrollable"
    data-ouia-component-id="5"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      &lt;ExpandableNav /&gt;
    </ul>
  </nav>
</div>
`;

exports[`Navigation should render corectly 1`] = `
<div>
  <nav
    aria-label="Local"
    class="pf-c-nav pf-m-scrollable"
    data-ouia-component-id="1"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      &lt;ExpandableNav /&gt;
    </ul>
  </nav>
</div>
`;

exports[`Navigation should render correctly 2 1`] = `
<div>
  <nav
    aria-label="Local"
    class="pf-c-nav pf-m-scrollable"
    data-ouia-component-id="3"
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-c-nav__list"
    >
      &lt;ExpandableNav /&gt;
    </ul>
  </nav>
</div>
`;
